[package]
name = "code4rena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.12.0"
fantoccini = "0.19.3"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13"
async-recursion = "1.0.0"
tempfile = "3.2.0"
git2 = "0.13.22"
headless_chrome = "1.0.5"
dotenv = "0.15.0"
thirtyfour = "0.26.0"